--- a/500 - Tools/502 - 自动构建&依赖管理&包管理/502.04 npm/常用操作.md
+++ b/500 - Tools/502 - 自动构建&依赖管理&包管理/502.04 npm/常用操作.md
@@ -1,20 +1,26 @@
-﻿### 常用操作
+﻿## 常用操作
 
-#### 设置淘宝镜像 ^[1]^
-##### 临时使用淘宝镜像
+### 设置淘宝镜像 ^[1]^
+#### 临时使用淘宝镜像
 ```shell
 npm --registry https://registry.npm.taobao.org install express
 ```
 
-##### 持久使用淘宝镜像
+#### 持久使用淘宝镜像
 ```shell
 npm config set registry https://registry.npm.taobao.org
 ```
 
-##### 恢复官网镜像
+#### 恢复官网镜像
 ```shell
 npm config set registry https://registry.npmjs.org
 ```
 
-### 参考
+### 查看全局包安装位置 ^[2]^
+```shell
+npm list -g --depth=0
+```
+
+## 参考
 1. [npm太慢， 淘宝npm镜像使用方法](https://blog.csdn.net/quuqu/article/details/64121812)
+2. [Where does npm install packages?](https://stackoverflow.com/questions/5926672/where-does-npm-install-packages)
