网站收集:极像素

--- a/500 - Tools/网站收集.md
+++ b/500 - Tools/网站收集.md
@@ -7,6 +7,9 @@
 #### [语雀-专业的云端知识库](https://www.yuque.com/)
 
 
+## 好玩
+### [极像素 - 超高像素看世界](https://www.sigoo.com/)
+
 ## 参考
 
 1. [推荐 12 个学习前端必备的神仙级工具类项目与网站](https://www.jianshu.com/p/65fdb38e3b2a)
