--- a/500 - Tools/网站收集.md
+++ b/500 - Tools/网站收集.md
@@ -15,6 +15,10 @@
 ### 对比 & 筛选
 #### [ProductHunt - The best new products in tech](https://www.producthunt.com/)
 
+
+## 资讯
+### [AnyKnew 5 分钟遍历全网热点](https://www.anyknew.com/#/)
+
 ## 参考
 
 1. [推荐 12 个学习前端必备的神仙级工具类项目与网站](https://www.jianshu.com/p/65fdb38e3b2a)
