--- a/500 - Tools/网站收集.md
+++ b/500 - Tools/网站收集.md
@@ -14,6 +14,7 @@
 ## 实用
 ### 对比 & 筛选
 #### [ProductHunt - The best new products in tech](https://www.producthunt.com/)
+#### [AlternativeTo - Crowdsourced software recommendations](https://alternativeto.net/)
 
 
 ## 资讯
