--- a/500 - Tools/网站收集.md
+++ b/500 - Tools/网站收集.md
@@ -12,9 +12,10 @@
 
 
 ## 实用
-### 对比 & 筛选
+### 对比 & 排名 & 筛选
 #### [ProductHunt - The best new products in tech](https://www.producthunt.com/)
 #### [AlternativeTo - Crowdsourced software recommendations](https://alternativeto.net/)
+#### [Slant - Choose the best](https://www.slant.co/)
 
 
 ## 资讯
