网站收集:对比&排名&筛选:wikipedia

--- a/500 - Tools/网站收集.md
+++ b/500 - Tools/网站收集.md
@@ -16,6 +16,7 @@
 #### [ProductHunt - The best new products in tech](https://www.producthunt.com/)
 #### [AlternativeTo - Crowdsourced software recommendations](https://alternativeto.net/)
 #### [Slant - Choose the best](https://www.slant.co/)
+#### [wikipedia #See also](https://en.wikipedia.org/wiki/SSH_(Secure_Shell)#See_also)
 
 
 ## 资讯
