LinuxGeneric:查看进程环境变量

--- a/100 - IT/103 - 操作系统/103.01 - Linux Generic/常用监控功能.md
+++ b/100 - IT/103 - 操作系统/103.01 - Linux Generic/常用监控功能.md
@@ -16,10 +16,23 @@ sudo iftop -i <interface_name>
 
 
 
+## 运行信息查看
+
+### 查看进程的环境变量 ^[3]^
+
+```sh
+cat /proc/2020/environ | tr '\0' '\n'
+```
+
+
+
+
+
 ## 参考
 
 1. [Linux Find Out What Process Are Using Swap Space](https://www.cyberciti.biz/faq/linux-which-process-is-using-swap/)
 2. [Check network usage per process in Linux](https://linuxhint.com/network_usage_per_process/)
+3. [Show the environment variables of a running process in Linux](https://ma.ttias.be/show-the-environment-variables-of-a-running-process-in-linux/)
 
 
 
