--- a/500 - Tools/网站收集.md
+++ b/500 - Tools/网站收集.md
@@ -7,6 +7,10 @@
 #### [语雀-专业的云端知识库](https://www.yuque.com/)
 
 
+###  工具
+#### [IDEA历史版本下载](https://www.jetbrains.com/zh-cn/idea/download/other.html)
+
+
 ## 好玩
 ### [极像素 - 超高像素看世界](https://www.sigoo.com/)
 
