网站收集:command-not-found

--- a/500 - Tools/网站收集.md
+++ b/500 - Tools/网站收集.md
@@ -5,6 +5,12 @@
 
 #### [ip 地理位置查询](https://www.geolocation.com/)
 
+### Linux
+
+[command-not-found - Install any command on any operating system.](https://command-not-found.com/)
+
+
+
 ### 知识分享
 #### [语雀-专业的云端知识库](https://www.yuque.com/)
 
