LinuxGeneric:查看进程工作目录

--- a/100 - IT/103 - 操作系统/103.01 - Linux Generic/常用功能.md
+++ b/100 - IT/103 - 操作系统/103.01 - Linux Generic/常用功能.md
@@ -20,6 +20,21 @@ sed -n '900,920p' file
 
 
 
+### 查看进程的工作目录 ^[2]^
+
+```shell
+pwdx <PID>
+
+lsof -p <PID> | grep cwd
+
+readlink -e /proc/<PID>/cwd
+```
+
+
+
+
+
 
 ## 参考
 1. [Get specific line from text file using just shell script](https://stackoverflow.com/questions/19327556/get-specific-line-from-text-file-using-just-shell-script)
+2. [Find out current working directory of a running process?](https://unix.stackexchange.com/questions/94357/find-out-current-working-directory-of-a-running-process)
