--- a/500 - Tools/网站收集.md
+++ b/500 - Tools/网站收集.md
@@ -5,9 +5,11 @@
 
 #### [ip 地理位置查询](https://www.geolocation.com/)
 
+
+
 ### Linux
 
-[command-not-found - Install any command on any operating system.](https://command-not-found.com/)
+#### [command-not-found - Install any command on any operating system.](https://command-not-found.com/)
 
 
 
@@ -15,15 +17,26 @@
 #### [语雀-专业的云端知识库](https://www.yuque.com/)
 
 
+
 ###  工具
+
 #### [IDEA历史版本下载](https://www.jetbrains.com/zh-cn/idea/download/other.html)
+
+
+
+### 画图
+#### [Excalidraw -- 手写体自由画图](https://excalidraw.com/)
+
+
 
 
 ## 好玩
 ### [极像素 - 超高像素看世界](https://www.sigoo.com/)
 
 
+
 ## 实用
+
 ### 对比 & 排名 & 筛选
 #### [ProductHunt - The best new products in tech](https://www.producthunt.com/)
 #### [AlternativeTo - Crowdsourced software recommendations](https://alternativeto.net/)
@@ -31,8 +44,12 @@
 #### [wikipedia #See also](https://en.wikipedia.org/wiki/SSH_(Secure_Shell)#See_also)
 
 
+
 ## 资讯
+
 ### [AnyKnew 5 分钟遍历全网热点](https://www.anyknew.com/#/)
+
+
 
 ## 参考
 
