--- a/500 - Tools/网站收集.md
+++ b/500 - Tools/网站收集.md
@@ -1,53 +1,56 @@
 ﻿## 开发相关
 ### 通用
-#### [选择环境 - 生成 .gitignore 文件](https://www.gitignore.io/)
+1. [选择环境 - 生成 .gitignore 文件](https://www.gitignore.io/)
 ![](https://picgo-notes.oss-cn-beijing.aliyuncs.com/img/gitignore.io.png)
 
-#### [ip 地理位置查询](https://www.geolocation.com/)
+1. [ip 地理位置查询](https://www.geolocation.com/)
 
 
 
 ### Linux
 
-#### [command-not-found - Install any command on any operating system.](https://command-not-found.com/)
+1. [command-not-found - Install any command on any operating system.](https://command-not-found.com/)
 
 
 
 ### 知识分享
-#### [语雀-专业的云端知识库](https://www.yuque.com/)
+1. [语雀-专业的云端知识库](https://www.yuque.com/)
 
 
 
 ###  工具
 
-#### [IDEA历史版本下载](https://www.jetbrains.com/zh-cn/idea/download/other.html)
+1. [IDEA历史版本下载](https://www.jetbrains.com/zh-cn/idea/download/other.html)
 
 
 
 ### 画图
-#### [Excalidraw -- 手写体自由画图](https://excalidraw.com/)
+1. [Excalidraw -- 手写体自由画图](https://excalidraw.com/)
 
 
+
+### 前端
+1. [html5test --- how well does your browser support html5?](http://html5test.com/)
 
 
 ## 好玩
-### [极像素 - 超高像素看世界](https://www.sigoo.com/)
+1. [极像素 - 超高像素看世界](https://www.sigoo.com/)
 
 
 
 ## 实用
 
 ### 对比 & 排名 & 筛选
-#### [ProductHunt - The best new products in tech](https://www.producthunt.com/)
-#### [AlternativeTo - Crowdsourced software recommendations](https://alternativeto.net/)
-#### [Slant - Choose the best](https://www.slant.co/)
-#### [wikipedia #See also](https://en.wikipedia.org/wiki/SSH_(Secure_Shell)#See_also)
+1. [ProductHunt - The best new products in tech](https://www.producthunt.com/)
+2. [AlternativeTo - Crowdsourced software recommendations](https://alternativeto.net/)
+3. [Slant - Choose the best](https://www.slant.co/)
+4. [wikipedia #See also](https://en.wikipedia.org/wiki/SSH_(Secure_Shell)#See_also)
 
 
 
 ## 资讯
 
-### [AnyKnew 5 分钟遍历全网热点](https://www.anyknew.com/#/)
+1. [AnyKnew 5 分钟遍历全网热点](https://www.anyknew.com/#/)
 
 
 
