Linux:查看文件系统类型

--- a/100 - IT/103 - 操作系统/103.01 - Linux Generic/常用功能.md
+++ b/100 - IT/103 - 操作系统/103.01 - Linux Generic/常用功能.md
@@ -32,9 +32,25 @@ readlink -e /proc/<PID>/cwd
 
 
 
+#### 查看文件系统类型 ^[3]^
+
+```bash
+df -Th
+fsck -N /dev/sda3
+lsblk -f
+blkid /dev/sda3
+file -sL /dev/sda3
+cat /etc/fstab
+```
+
+
+
 
 
 
 ## 参考
 1. [Get specific line from text file using just shell script](https://stackoverflow.com/questions/19327556/get-specific-line-from-text-file-using-just-shell-script)
+
 2. [Find out current working directory of a running process?](https://unix.stackexchange.com/questions/94357/find-out-current-working-directory-of-a-running-process)
+
+3. [7 Ways to Determine the File System Type in Linux (Ext2, Ext3 or Ext4)](https://www.tecmint.com/find-linux-filesystem-type/)
