npm:clean cache

--- a/500 - Tools/502 - 自动构建&依赖管理&包管理/502.04 npm/常用操作.md
+++ b/500 - Tools/502 - 自动构建&依赖管理&包管理/502.04 npm/常用操作.md
@@ -21,6 +21,22 @@ npm config set registry https://registry.npmjs.org
 npm list -g --depth=0
 ```
 
+
+
+### 清除缓存 ^[3]^
+
+```bash
+npm cache clean
+```
+
+
+
+
+
 ## 参考
+
 1. [npm太慢， 淘宝npm镜像使用方法](https://blog.csdn.net/quuqu/article/details/64121812)
+
 2. [Where does npm install packages?](https://stackoverflow.com/questions/5926672/where-does-npm-install-packages)
+
+3. [How to clear cache in Yarn?](https://stackoverflow.com/questions/39991508/how-to-clear-cache-in-yarn)
