JMX:doc:MXBean specification

--- a/500 - Tools/507 - JVM相关/02 - JMX/相关阅读材料.md
+++ b/500 - Tools/507 - JVM相关/02 - JMX/相关阅读材料.md
@@ -13,3 +13,23 @@
     - [Exposing a Resource for Remote Management By JConsole](https://docs.oracle.com/javase/tutorial/jmx/remote/jconsole.html)
     - [Creating a Custom JMX Client](https://docs.oracle.com/javase/tutorial/jmx/remote/custom.html)
 
+
+
+- [Annotation Type MXBean](https://docs.oracle.com/javase/7/docs/api/javax/management/MXBean.html)
+
+  - MXBean specification
+  - Definition of an MXBean
+  - Naming conventions
+  - Type mapping rules
+  - Mappings for primitive types
+  - Mappings for collections (List\<E\> etc)
+  - Mappings for maps (Map\<K,V\> etc)
+  - Mappings for MXBean interfaces
+  - Mappings for other types
+  - Reconstructing an instance of Java type J from a CompositeData
+  - Recursive types
+  - MBeanInfo contents for an MXBean
+  - Type Names
+  - Exceptions
+
+
