--- a/500 - Tools/516 - 容器、虚拟化/01 - Docker/03 - Docker 常用操作/复制容器中的文件到宿主机.md
+++ b/500 - Tools/516 - 容器、虚拟化/01 - Docker/03 - Docker 常用操作/复制容器中的文件到宿主机.md
@@ -1,8 +1,6 @@
-﻿## Docker 常用操作
+﻿## 复制容器中的文件到宿主机 ^[1]^
 
-### 复制容器中的文件到宿主机 ^[1]^
-
-```sh
+```bash
 docker cp <containerId>:/file/path/within/container /host/path/target
 ```
 
