--- a/900 - MetaCongnition/01 - MindMap/系统设计.md
+++ b/900 - MetaCongnition/01 - MindMap/系统设计.md
@@ -12,6 +12,8 @@
 - Interface segregation principle
 - Dependency inversion principle
 
+#### DRY
+
 
 
 ### 目标
@@ -20,3 +22,9 @@
 - 低耦合
 - 可扩展
 - 可维护
+
+
+
+### 参考
+
+1. [Don't repeat yourself](https://en.wikipedia.org/wiki/Don%27t_repeat_yourself)
