MyWay:系统设计:流程/步骤

--- a/900 - MetaCongnition/01 - MindMap/系统设计.md
+++ b/900 - MetaCongnition/01 - MindMap/系统设计.md
@@ -1,4 +1,4 @@
-## 系统设计
+﻿﻿## 系统设计
 
 
 
@@ -22,6 +22,22 @@
 - 低耦合
 - 可扩展
 - 可维护
+
+
+
+### 流程
+
+- [ ] 需求、需求、需求！！！
+  - [ ] requirements
+- [ ] 现状分析
+- [ ] 思路
+  - [ ] 涉及的 use case
+- [ ] 方案
+  - [ ] requirements 是否覆盖完整
+  - [ ] 各 use case 流程
+  - [ ] 关联影响
+    - [ ] 演进法
+    - [ ] 逆向思维 --- 系统需要实现的功能  <----> 系统其他部分是否不需要这些功能
 
 
 
