MyWay:系统设计:测试环境搭建工时

--- a/900 - MetaCongnition/01 - MindMap/系统设计.md
+++ b/900 - MetaCongnition/01 - MindMap/系统设计.md
@@ -1,4 +1,4 @@
-﻿﻿﻿## 系统设计
+﻿﻿﻿﻿## 系统设计
 
 
 
@@ -39,6 +39,9 @@
     - [ ] 演进法
     - [ ] 逆向思维 --- 系统需要实现的功能  <----> 系统其他部分是否不需要这些功能
 - [ ] 工时预估
+  - [ ] 基于开发任务的拆分
+  - [ ] 测试环境搭建
+  - [ ] 测试时间
 
 
 
